[Config] 주요 설정 파일(YAML, Python) Git 추적 추가

--- a/.gitignore
+++ b/.gitignore
@@ -49,4 +49,4 @@ tactical_map_backup.py
 models/*
 
 # config
-config/*
+# config/* (Removed to allow tracking of essential YAML/Python config files)
